--- a/package.json
+++ b/package.json
@@ -1,27 +1,57 @@
+
 {
-  "name": "gamefinder",
+  "name": "GameFinder",
   "version": "1.0.0",
-  "description": "",
+  "description": "##Summary",
   "main": "app.js",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -rf dist",
+    "watch": "webpack --watch",
+    "prebuild": "npm run clean -s; npm install",
+    "build": "webpack --progress --colors",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/chandlerbasso/gamefinder.git"
+    "url": "git+https://github.com/mgershowitz/cookIt.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Matt Gershowitz Chandler Basso Michael Werbowsky Arlen Cho",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/chandlerbasso/gamefinder/issues"
+    "url": "https://github.com/mgershowitz/cookIt/issues"
   },
-  "homepage": "https://github.com/chandlerbasso/gamefinder#readme",
+  "homepage": "https://github.com/mgershowitz/cookIt#readme",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.1.6",
     "morgan": "^1.7.0",
-    "nodemon": "^1.10.0",
     "path": "^0.12.7",
-    "router": "^1.1.4"
+    "pg-promise": "^5.2.0",
+    "request": "^2.74.0"
+  },
+  "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "bootstrap": "^3.3.6",
+    "css-loader": "^0.23.1",
+    "dotenv": "^2.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-template": "^5.0.0",
+    "react": "^15.2.1",
+    "react-bootstrap": "^0.29.5",
+    "react-dom": "^15.2.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
