--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "GameFinder",
   "version": "1.0.0",
@@ -31,6 +30,7 @@
     "morgan": "^1.7.0",
     "path": "^0.12.7",
     "pg-promise": "^5.2.0",
+    "react-bootstrap": "^0.29.5",
     "request": "^2.74.0"
   },
   "devDependencies": {
@@ -39,7 +39,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.11.1",
-    "bootstrap": "^3.3.6",
+    "bootstrap": "^3.3.7",
     "css-loader": "^0.23.1",
     "dotenv": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
